fix new arrivals tablet spacing

--- a/src/components/blocks/BookCard/index.module.scss
+++ b/src/components/blocks/BookCard/index.module.scss
@@ -12,10 +12,6 @@
   margin-top: rem(-24px);
 }
 
-.content {
-  height: rem(420px);
-}
-
 .bookCoverWrapper {
   width: 100%;
   border-radius: rem(168px) rem(168px) 0 0;
